--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,23 +30,33 @@ services:
   wordpress:
     depends_on:
       - db
-    image: shivisharma02/shivi-blog-wordpress:latest
+      - phpmyadmin
+    build: .
+    container_name: wpshivi
     volumes:
-      - wordpress_data_volume:/var/www/html
-    ports:
-      - "8081:80"
+      - ./:/var/www/html
+    expose:
+      - 80
     restart: always
-    environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: root
-      WORDPRESS_DB_PASSWORD: ""
-      WORDPRESS_DB_NAME: shivi-blog
     networks:
       - dockerwp
+
+  #Apache
+  apache:
+    build: ./apache-conf/
+    container_name: apachewp
+    volumes:
+      - ./apache-conf/httpd.conf:/etc/apache2/sites-enabled/httpd.conf
+    ports:
+      - "80:80"
+    restart: always
+    networks:
+      - dockerwp
+
 
 networks:
   dockerwp:
 
 volumes:
   db_data_volume: {}
-  wordpress_data_volume: {}
+  # wordpress_data_volume: {}
